# projects

./: .gitignore  .gitmodules  CMakeLists.txt  ComputerV1.sln  Exceptions.class.cpp  How To Get The Subject_pdf Files  IO.java  Makefile  Podfile  Process.class.cpp  README.md  Stack.class.cpp  VirtualMachine.class.cpp  astar_search.java  atoi_test.c  author  broker.sh  buildAvaj.sh  colors.java  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstdelone.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  (+44 more)
21sh/: Makefile  db.txt
Bomberman/: main.cpp
ComputerV1/: ComputerV1.csproj  InvalidEquationException.cs  Poly.cs  Program.cs
FDF/: Makefile  arr_size.c  average_height.c  build_struct.c  display_map.c  draw.c  draw_down.c  draw_line.c  draw_map.c  draw_up.c  draw_width.c  error.c  fdf.h  hook.c  keyhook.c  main.c  map_arr.c  memalloc_arr.c  movemap.c  nmmu.fdf  nmmu.txt  nmmu3.fdf  point.c  point_rotation.c  read_file.c  set_map.c  wtc.fdf
Game/: main.cpp
Lem_in/: Makefile  error.map  lem_in  solo.map  sub1.map
Matcha/: account.php  account_cp.php  account_ema.php  account_upload.php  account_user.php  connect.php  create.php  index.php  login.php  register.php  update_bio.php  update_cp.php  update_ema.php  update_user.php
Portal/: Dockerfile  Jenkinsfile  Package.resolved  Package.swift  README.md  README.rtf  cli-config.yml  erl_crash.dump  iterative-dev.sh  manifest.yml
RT/: author
RTv1/: Makefile  RT
Rush01/: RUSHER  rush01b.c  rush01hrossouwpersonal.c
SocialTech/: .gitignore  README.md  runDB.sh  testUsers.txt
Swifty Companion.xcodeproj/: project.pbxproj
Swifty Companion.xcworkspace/: contents.xcworkspacedata
Swingy/: README.md  heroes.txt  pom.xml
Wolf3D/: Makefile  wolf3d
all_main/: m_atoi.c  m_bzero.c  m_isalnum.c  m_isalpha.c  m_isascii.c  m_isdigit.c  m_isprint.c  m_memalloc.c  m_memccpy.c  m_memchr.c  m_memcmp.c  m_memcpy.c  m_memmove.c  m_memset.c  m_putchar.c  m_strcat.c  m_strchr.c  m_strcmp.c  m_strcpy.c  m_strdup.c  m_strlcat.c  m_strlen.c  m_strncat.c  m_strncmp.c  m_strncpy.c  m_strnstr.c  m_strrchr.c  m_strstr.c  m_tolower.c  m_toupper.c  main.c
app/: app.jsx
colle00/: rough.c
config/: config.js  express.js
corewar/: Makefile
(+1698 files in other folders)
